# fem_truss_wasm

./: .gitignore  CMakeLists.txt  README.md  config_wasm.sh
html/: index.html  update_wasm.sh
html/js/: main.mjs  main.mts  main.wasm  package-lock.json  package.json  tsconfig.json
src/: CMakeLists.txt  Matrix.hpp  MatrixUtils.hpp  assert.hpp  cstdint.h  main.c  memory.hpp  new.cpp  new.hpp  print.h  truss_fem.cpp  truss_fem.hpp  vector.hpp
tests/: CMakeLists.txt  Matrix_t.cpp
toolchains/: gcc.cmake  wasm-clang.cmake
